Added Detours as Submodule, Changed build settings to X64 only (to prevent issues), added a readme and setup files.

--- a/CoroHeart/CoroHeart.vcxproj
+++ b/CoroHeart/CoroHeart.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>D:\\Games\steamapps\common\DeathEndReQuest\resource\bin</OutDir>
+    <OutDir>C:\\Steam\steamapps\common\Death end reQuest\resource\bin</OutDir>
     <ExecutablePath>$(VC_ExecutablePath_x64);$(CommonExecutablePath)</ExecutablePath>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);include</IncludePath>
     <IntDir>obj\$(Platform)\$(Configuration)\</IntDir>
@@ -107,7 +107,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>Detours64/detours.lib;Detours64/syelog.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Dependencies/Detours/lib.X64/detours.lib;Dependencies/Detours/lib.X64/syelog.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>
       </ModuleDefinitionFile>
     </Link>
@@ -174,13 +174,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dependencies\Detours\include\detours.h" />
+    <ClInclude Include="Dependencies\Detours\include\detver.h" />
+    <ClInclude Include="Dependencies\Detours\include\syelog.h" />
     <ClInclude Include="include\corodetours.h" />
     <ClInclude Include="include\coroheart.h" />
-    <ClInclude Include="include\detours.h" />
-    <ClInclude Include="include\detver.h" />
     <ClInclude Include="include\logging.h" />
     <ClInclude Include="include\offsets.h" />
-    <ClInclude Include="include\syelog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\coroheart.c" />
