Updated Setup batch file and submodules to point to the right directories.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "CoroHeart/Detours"]
+[submodule "CoroHeart/Dependencies/Detours"]
 	path = CoroHeart/Dependencies/Detours
 	url = https://github.com/microsoft/Detours
